# CudaWaterSim

./: .gitignore  CMakeLists.txt  main.cu
src/: main.cu  utils.cpp  utils.cu  utils.h
src/sim/: collisionI.cuh  constants.h  controller.cu  controller.cuh  floating.h  modifier.cuh  modifierI.cuh  point.cu  point.cuh  quaternion.cuh  sim.cu  sim.cuh  vec3.cu  vec3.cuh
src/sim/colliders/: always.cuh  cuboid.cuh  planar.cuh  spherical.cuh
src/sim/controller/: bakedPoint.h  controller.cu  controller.cuh  file.cpp  file.h  threadSafeQueue.h
src/sim/math/: floating.h  quaternion.cu  quaternion.cuh  vec2.cu  vec2.cuh  vec3.cu  vec3.cuh  vec3Primitive.h
src/ui/: platform_specific.h  window.cpp  window.h
src/utils/: utils.h
